Layout bugs (HTML and CSS) are fixed. mobile screen size

--- a/promedio-media-moda/styles/styles.css
+++ b/promedio-media-moda/styles/styles.css
@@ -147,6 +147,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     height: 40px;
     margin: 20px auto;
     background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
